# paypal2quickbooks

./: .gitignore  LICENSE  Makefile  README.md  convert.py
.cursor/plans/: domain-to-company-matching.md  gmail-po-fetching-integration.md  quickbooks-invoice-form-integration.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/src/beanscounter/api/: app.py
backend/src/beanscounter/api/routers/: gmail.py  invoices.py  quickbooks.py  settings.py
backend/src/beanscounter/core/: domain_utils.py  encryption.py  po_reader.py
backend/src/beanscounter/integrations/: gmail_client.py  quickbooks_client.py
backend/src/beanscounter/services/: domain_matching_service.py  email_domain_matching_service.py  gmail_settings_service.py  gmail_sync_service.py  invoice_storage_service.py  po_metadata_service.py  po_to_invoice_service.py  product_mapping_service.py  product_matching_service.py  qb_customer_service.py  settings_service.py
backend/src/core/: po_reader.py
backend/src/paypal2quickbooks/: __init__.py  cli.py
backend/src/paypal2quickbooks/api/: app.py
backend/src/paypal2quickbooks/api/routers/: invoices.py
backend/src/paypal2quickbooks/core/: csv_reader.py  csv_writer.py  invoice_mapper.py  pdf_parser.py
backend/src/paypal2quickbooks/integrations/: quickbooks_client.py
backend/src/paypal2quickbooks/services/: converter_service.py  csv_invoice_importer.py
backend/tests/: test_core_pdf_parser.py
docs/: backend.md  frontend.md
frontend/: package.json
frontend/src/: App.jsx  index.css
qa/scripts/: validate_csv_schema.py  (+1 more)
(+14 files in other folders)
