[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paypal2quickbooks"
version = "0.1.0"
description = "Convert PayPal invoices to QuickBooks CSV"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "fastapi>=0.115",
    "uvicorn>=0.23",
    "pydantic>=2.7"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
paypal2quickbooks = "paypal2quickbooks.cli:app"
