[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beanscounter"
version = "0.1.0"
description = "Convert PayPal invoices to QuickBooks CSV"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "fastapi>=0.115",
    "uvicorn>=0.23",
    "pydantic>=2.7",
    "pdfplumber>=0.10",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "rich>=13.0",
    "requests>=2.31"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
beanscounter = "beanscounter.cli:app"
